# attackalogue

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: labeler.yml  snyk-pythom.yml  snyk-python.yml
ThreatDragonModels/Test/: Test.json
ThreatDragonModels/Test Model/: Test Model.json
ThreatDragonModels/Threat Dragon/: Threat Dragon.json
docker/flask_app/: Dockerfile
docker/nginx/: Dockerfile  project.conf
flask_app/: Dockerfile  app.py  requirements.txt  test_snyk.py
nginx/: Dockerfile  nginx.conf  project.conf
schema/: detection.json  detection_example.json
scratch/: popup.py
scratch/templates/: index.html
src/api/: app.py  requirements.txt
