[tool.poetry]
name = "attackalogue"
version = "0.1.0"
description = "An API driven catalogue for all your security detections, rules and searches mapped back to the MITRE ATT&CK framework."
authors = ["edmerrett <edward.merrett@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.3.3"
flask = "^2.2.3"
uuid = "^1.30"
flask-expects-json = "^1.7.0"
passlib = "^1.7.4"
pyjwt = "^2.6.0"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pylint = "^2.17.1"
pre-commit = "^3.2.1"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
